feat(workflow): 更改工作流 (#2)
* feat(workflow): 重构并增强 GitHub Actions 构建与发布流程

将原有的简单构建流程拆分为 prepare、restore、build 和 package 四个阶段，
提升构建过程的模块化与可读性。引入缓存机制以加快依赖恢复速度，并增加
PR 构建结果自动评论功能，便于追踪每次提交的构建状态。

同时优化 prerelease 工作流：增加并发控制，防止重复执行；调整 MSBuild
缓存策略以提高稳定性；完善版本号计算逻辑与更新日志（changelog）生成规则，
支持按提交信息分类展示变更内容。

此外，在工作流中忽略文档类文件变动触发构建，减少不必要的 CI 执行。

* feat(workflow): 支持通过 push tag 触发预发布和正式版构建

新增对 Git push tag 事件的支持，允许通过推送标签自动触发布局或正式版本的构建流程。
同时保留原有的 workflow_dispatch 手动触发方式以保证向后兼容。

主要变更包括：
- 在 `on` 中添加 `push.tags` 事件监听
- 新增步骤用于获取并解析 tag 名称，去除 v/b 前缀
- 判断是否为预发布版本（根据 tag 是否以 'b' 开头）
- 修改版本号逻辑：push tag 时直接使用 tag 名，不再自动 bump 版本
- 调整 changelog 格式，增加折叠功能以便阅读
- 发布时使用实际 tag 名作为 release 名称和标签名

* feat(workflow): 为预发布工作流添加 Cosign 签名支持

在预发布流程中集成 Cosign 工具，对生成的 ZIP 包和 CHANGELOG 文件进行数字签名，
并确保签名文件随发布资产一同上传。提升了软件供应链的安全性。

* feat(workflow): 改进 GitHub Actions 工作流以支持更精确的并发控制和版本管理

- 修改 `concurrency.group` 以包含更多上下文变量，避免不必要的作业取消
- 在 prerelease 工作流中允许从 tags 触发发布流程
- 完善版本号解析逻辑，确保主、次、修订号格式正确并可按类型递增
- 优化 Git 标签处理方式，使用 `git describe` 提高准确性
- 调整 changelog 和归档文件命名规则，去除多余的 `.0` 后缀
- 增加对生成产物的签名验证步骤，提升安全性
- 升级 action-gh-release 至 v2 并启用 overwrite 选项以增强稳定性

* 更新 prerelease.yml

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -2,34 +2,222 @@ name: .NET Build
 
 on:
   push:
-    branches: [ main,beta ]
+    branches: [ main, beta ]
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - "**/*.md"
+      - "docs/**"
+      - "Images/**"
+      - "Manual.md"
+      - "README.md"
+      - "UpdateLog.md"
+      - "CODE_OF_CONDUCT.md"
+      - "LICENSE"
+      - "privacy.txt"
+      - "icc.png"
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}-${{ github.head_ref || github.sha }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
+  prepare:
+    name: Prepare Build
+    runs-on: windows-latest
+    outputs:
+      build_time: ${{ steps.build-info.outputs.build_time }}
+      commit_hash: ${{ steps.build-info.outputs.commit_hash }}
+      build_number: ${{ steps.build-info.outputs.build_number }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.2.2
+
+      - name: Set build information
+        id: build-info
+        run: |
+          echo "build_time=$(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')" >> $env:GITHUB_OUTPUT
+          echo "commit_hash=$("${{ github.sha }}".SubString(0, 7))" >> $env:GITHUB_OUTPUT
+          echo "build_number=${{ github.run_number }}" >> $env:GITHUB_OUTPUT
+          
+      - name: Display build info
+        run: |
+          echo "Build time: ${{ steps.build-info.outputs.build_time }}"
+          echo "Commit hash: ${{ steps.build-info.outputs.commit_hash }}"
+          echo "Build number: ${{ steps.build-info.outputs.build_number }}"
+
+  restore:
+    name: Restore Dependencies
+    needs: prepare
+    runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.2.2
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
+
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v2.0.1
+
+      - name: Cache NuGet tools
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~\AppData\Local\NuGet\Cache
+            ~\AppData\Local\Microsoft\MSBuild
+          key: ${{ runner.os }}-nuget-tools-${{ hashFiles('**/*.csproj') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-tools-
+
+      - name: Restore NuGet Packages
+        run: nuget restore "Ink Canvas.sln"
+
+      - name: Cache restored packages
+        uses: actions/cache@v4
+        with:
+          path: '~\AppData\Local\NuGet\Cache'
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
 
   build:
+    name: Build Application
+    needs: [prepare, restore]
     runs-on: windows-latest
-
     steps:
-    - uses: actions/checkout@v4.2.2
+      - name: Checkout code
+        uses: actions/checkout@v4.2.2
 
-    - name: Setup MSbuild
-      uses: microsoft/setup-msbuild@v2
-   
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v2.0.1
-      
-    - name: Restore NuGet Packages
-      run: nuget restore "Ink Canvas.sln"
+      - name: Restore NuGet tools from cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~\AppData\Local\NuGet\Cache
+            ~\AppData\Local\Microsoft\MSBuild
+          key: ${{ runner.os }}-nuget-tools-${{ hashFiles('**/*.csproj') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-tools-
 
-    - name: Build the Solution
-      run: |
-        msbuild -t:restore /p:GitFlow="Github Action"
-        msbuild /p:platform="AnyCPU" /p:configuration="Debug" /p:GitFlow="Github Action" "Ink Canvas/InkCanvasForClass.csproj"
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
 
-    - name: Upload to artifact
-      uses: actions/upload-artifact@v4.5.0
-      with:
-        name: InkCanvasForClass
-        path: "Ink Canvas/bin/Debug/net472"
+      - name: Restore NuGet packages from cache
+        uses: actions/cache@v4
+        with:
+          path: '~\AppData\Local\NuGet\Cache'
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+
+      - name: Build the Solution
+        run: |
+          msbuild -t:restore /p:GitFlow="Github Action"
+          msbuild /p:platform="AnyCPU" /p:configuration="Debug" /p:GitFlow="Github Action" "Ink Canvas/InkCanvasForClass.csproj"
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4.5.0
+        with:
+          name: InkCanvasForClass-Build
+          path: "Ink Canvas/bin/Debug/net472"
+
+  package:
+    name: Package Application
+    needs: build
+    runs-on: windows-latest
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: InkCanvasForClass-Build
+          path: build-output
+
+      - name: Create release archive
+        run: |
+          $version = "debug-${{ github.sha }}-${{ needs.prepare.outputs.build_number }}"
+          $archiveName = "InkCanvasForClass.CE.$version.zip"
+          Compress-Archive -Path "build-output\*" -DestinationPath $archiveName -Force
+          echo "archive_name=$archiveName" >> $env:GITHUB_OUTPUT
+
+      - name: Upload packaged artifact
+        uses: actions/upload-artifact@v4.5.0
+        with:
+          name: InkCanvasForClass-Package
+          path: "*.zip"
+
+      - name: Generate build summary
+        run: |
+          echo "## Build Summary" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Property | Value |" >> $env:GITHUB_STEP_SUMMARY
+          echo "|----------|-------|" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Build time | ${{ needs.prepare.outputs.build_time }} |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Commit hash | ${{ needs.prepare.outputs.commit_hash }} |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Branch | ${{ github.ref_name }} |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Build number | ${{ needs.prepare.outputs.build_number }} |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Archive | ${{ github.workspace }}/*.zip |" >> $env:GITHUB_STEP_SUMMARY
+          
+          echo "### Artifacts" >> $env:GITHUB_STEP_SUMMARY
+          echo "Created package: ${{ github.workspace }}/*.zip" >> $env:GITHUB_STEP_SUMMARY
+          
+  comment-pr:
+    name: Comment on PR
+    needs: [prepare, build, package]
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Find Existing Comment
+        uses: peter-evans/find-comment@v3
+        id: find-comment
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: 'github-actions[bot]'
+          body-includes: '# 构建历史记录'
+
+      - name: Format status
+        id: status
+        run: |
+          if [ "${{ needs.package.result }}" = "success" ]; then
+            echo "icon=✅" >> $GITHUB_OUTPUT
+            echo "text=成功" >> $GITHUB_OUTPUT
+          else
+            echo "icon=❌" >> $GITHUB_OUTPUT
+            echo "text=失败" >> $GITHUB_OUTPUT
+          fi
+          
+      - name: Build Previous Entries
+        id: prev
+        if: steps.find-comment.outputs.comment-id != ''
+        run: |
+          comment_url="https://api.github.com/repos/${{ github.repository }}/issues/comments/${{ steps.find-comment.outputs.comment-id }}"
+          prev_entries=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "$comment_url" | \
+            jq -r '.body' | \
+            grep '^| ' | \
+            grep -v '^| 状态 | 提交 | 构建产物 |' | \
+            head -n 15)
+          echo "entries<<EOF" >> $GITHUB_OUTPUT
+          echo "$prev_entries" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+          
+          # Count the number of previous builds
+          build_count=$(echo "$prev_entries" | grep -c '^| ')
+          echo "build_count=$build_count" >> $GITHUB_OUTPUT
+          
+      - name: Create or update comment
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          comment-id: ${{ steps.find-comment.outputs.comment-id }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            # 构建历史记录 ${{ steps.status.outputs.icon }}
+            
+            | 状态 | 提交 | 构建产物 | 构建时间 | 操作 |
+            |------|------|---------|---------|------|
+            | ${{ steps.status.outputs.icon }} ${{ steps.status.outputs.text }} | ${{ github.sha }}<br>（当前提交） | ${{ needs.package.result == 'success' && '[📦 下载](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})' || '无' }} | ${{ needs.prepare.outputs.build_time }} | [查看详情](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) |
+            ${{ steps.prev.outputs.entries }}
+            
+            ${{ steps.prev.outputs.build_count > 5 && '_💡 提示: 如果您仍在进行开发更改，可以考虑将此 PR 转换为 Draft_' || ''}}
+            
+            ---
+            <sub>🤖 这是由 GitHub Actions 自动发布的评论。如有问题请联系项目维护者。</sub>
+          edit-mode: replace
