--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main, beta ]
   pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
     branches: [ main ]
     paths-ignore:
       - '**/*.md'
@@ -27,39 +28,39 @@ permissions:
   pull-requests: write
 
 jobs:
-  prepare:
-    name: Prepare Build
-    runs-on: windows-latest
+  find-or-create-pr-comment:
+    name: Find or Create PR Comment
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     outputs:
-      build_time: ${{ steps.build-info.outputs.build_time }}
-      commit_hash: ${{ steps.build-info.outputs.commit_hash }}
-      build_number: ${{ steps.build-info.outputs.build_number }}
+      comment_id: ${{ steps.find-comment.outputs.comment_id }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.2.2
-      - name: Set build information
-        id: build-info
-        env:
-          GITHUB_SHA: ${{ github.sha }}
-          GITHUB_RUN_NUMBER: ${{ github.run_number }}
+      - name: Find existing bot comment
+        id: find-comment
         run: |
-          $buildTime = Get-Date -Format 'yyyy-MM-dd HH:mm:ss'
-          $commitHash = $env:GITHUB_SHA.SubString(0, 7)
+          # 查找包含特定标记的现有评论
+          COMMENTS=$(gh api \
+            -H "Accept: application/vnd.github.v3+json" \
+            "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" \
+            --jq '.[] | select(.body | contains("<!-- github-action-pr-build -->")) | .id' | head -1)
           
-          echo "build_time=$buildTime" >> $env:GITHUB_OUTPUT
-          echo "commit_hash=$commitHash" >> $env:GITHUB_OUTPUT
-          echo "build_number=$env:GITHUB_RUN_NUMBER" >> $env:GITHUB_OUTPUT
-          
-          echo "构建信息已设置:"
-          echo "  时间: $buildTime"
-          echo "  提交: $commitHash"
-          echo "  编号: $env:GITHUB_RUN_NUMBER"
+          if [ -n "$COMMENTS" ]; then
+            echo "📝 找到现有评论 ID: $COMMENTS"
+            echo "comment_id=$COMMENTS" >> $GITHUB_OUTPUT
+          else
+            echo "📝 未找到现有评论，将创建新评论"
+            echo "comment_id=" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GH_TOKEN: ${{ github.token }}
 
   pr-preview-comment:
     name: PR Preview (Building)
-    needs: prepare
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
+    needs: find-or-create-pr-comment
     permissions:
       pull-requests: write
     steps:
@@ -68,71 +69,166 @@ jobs:
         env:
           GH_REPO: ${{ github.repository }}
           GH_RUN_ID: ${{ github.run_id }}
-          GH_SHA: ${{ github.sha }}
-          BUILD_TIME: ${{ needs.prepare.outputs.build_time }}
+          PR_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
+          IS_READY_FOR_REVIEW: ${{ github.event.action == 'ready_for_review' }}
         run: |
-          # 构建预览评论内容，使用文件确保换行
+          # 构建预览评论内容
           {
-            echo "🏗️ **正在构建中...**"
+            if [ "$IS_READY_FOR_REVIEW" = "true" ]; then
+              echo "# 🚀 PR 准备审查 - 构建预览"
+              echo ""
+              echo "**状态:** 🟡 正在构建（准备审查状态）..."
+            else
+              echo "# 🏗️ PR 构建预览"
+              echo ""
+              echo "**状态:** 🟡 正在构建..."
+            fi
+            
+            echo "**分支提交:** \`$PR_HEAD_SHA\`"
+            echo "**操作:** [查看运行详情](https://github.com/$GH_REPO/actions/runs/$GH_RUN_ID)"
             echo ""
-            echo "| 状态 | 提交 | 开始时间 | 操作 |"
-            echo "|------|------|---------|------|"
-            echo "| 🟡 Building | $GH_SHA | $BUILD_TIME | [查看运行详情](https://github.com/$GH_REPO/actions/runs/$GH_RUN_ID) |"
-            echo ""
-            echo "<sub>🤖 构建完成后，状态将自动更新</sub>"
+            
+            if [ "$IS_READY_FOR_REVIEW" = "true" ]; then
+              echo "> 📋 此 PR 已标记为 **准备审查**，正在进行构建验证"
+            fi
+            
+            echo "---"
+            echo "<!-- github-action-pr-build -->"
+            echo "<!-- build-id: $GH_RUN_ID -->"
+            echo "<!-- event-type: ${{ github.event.action }} -->"
+            echo "<!-- pr-head-sha: $PR_HEAD_SHA -->"
+            echo "<!-- merge-sha: ${{ github.sha }} -->"
+            echo "🤖 构建完成后，状态将自动更新"
           } > preview_comment.txt
           
-          # 输出多行内容
           preview_content=$(cat preview_comment.txt)
-          delimiter="PREVIEW_$(date +%s)"
-          echo "preview_body<<$delimiter" >> $GITHUB_OUTPUT
+          echo "preview_body<<EOF" >> $GITHUB_OUTPUT
           echo "$preview_content" >> $GITHUB_OUTPUT
-          echo "$delimiter" >> $GITHUB_OUTPUT
-          
-          echo "预览评论内容已准备"
-      - name: Post Preview Comment
+          echo "EOF" >> $GITHUB_OUTPUT
+      
+      - name: Post/Update Preview Comment
+        id: create-preview-comment
         uses: peter-evans/create-or-update-comment@v4
         with:
           issue-number: ${{ github.event.pull_request.number }}
+          comment-id: ${{ needs.find-or-create-pr-comment.outputs.comment_id }}
           body: ${{ steps.prepare-preview.outputs.preview_body }}
           edit-mode: replace
 
   build-and-package:
     name: Build & Package
-    needs: prepare
     runs-on: windows-latest
     outputs:
       archive_name: ${{ steps.create-archive.outputs.archive_name }}
+      build_result: ${{ steps.check-exe.outputs.build_success }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.2.2
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v2
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 1
+
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v2.0.1
-      - name: Cache dependencies
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
+
+      - name: Cache NuGet packages and obj files
+        id: cache-nuget
         uses: actions/cache@v4
         with:
           path: |
+            # NuGet 全局包缓存（已下载的包）
+            ~/.nuget/packages
+            # NuGet 缓存目录（包索引）
             ~\AppData\Local\NuGet\Cache
-            ~\AppData\Local\Microsoft\MSBuild
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
-      - name: Restore and Build
+            # 项目 obj 目录（包含 project.assets.json）
+            Ink Canvas/obj/
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj', '**/packages.config', '**/*.sln') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
+      - name: Restore NuGet packages (if cache missed)
+        if: steps.cache-nuget.outputs.cache-hit != 'true'
         run: |
-          nuget restore "Ink Canvas.sln"
-          msbuild /p:platform="AnyCPU" /p:configuration="Debug" /p:GitFlow="Github Action" "Ink Canvas/InkCanvasForClass.csproj"
-      - name: Create Package
+          Write-Host "📥 缓存未命中，正在恢复 NuGet 包..." -ForegroundColor Yellow
+          
+          # 恢复解决方案级别的包
+          nuget restore "Ink Canvas.sln" -Verbosity minimal
+          
+          # 恢复项目级别的包
+          msbuild -t:restore "Ink Canvas/InkCanvasForClass.csproj" /p:GitFlow="Github Action" /p:RestorePackagesConfig=true /verbosity:minimal
+          
+          Write-Host "✅ NuGet 包恢复完成" -ForegroundColor Green
+
+      - name: Build the Solution
+        run: |
+          Write-Host "🔨 正在构建项目..." -ForegroundColor Cyan
+          
+          # 如果是 ready_for_review 事件，添加特殊标记
+          if ("${{ github.event.action }}" -eq "ready_for_review") {
+            Write-Host "🚀 PR 准备审查状态构建 - 进行完整验证" -ForegroundColor Magenta
+            $GITFLOW = "Github Action - Ready For Review"
+          } else {
+            $GITFLOW = "Github Action"
+          }
+          
+          # 执行构建
+          msbuild /p:platform="AnyCPU" /p:configuration="Debug" /p:GitFlow="$GITFLOW" "Ink Canvas/InkCanvasForClass.csproj" /m /p:UseMultiToolTask=true /p:EnforceProcessCountAcrossBuilds=true /verbosity:minimal
+          
+          Write-Host "🏗️ 构建命令执行完成" -ForegroundColor Cyan
+
+      - name: Check if exe file is generated
+        id: check-exe
+        run: |
+          Write-Host "🔍 检查是否生成可执行文件..." -ForegroundColor Cyan
+          
+          $exePath = "Ink Canvas\bin\Debug\net472\InkCanvasForClass.exe"
+          
+          if (Test-Path $exePath) {
+            Write-Host "✅ 找到可执行文件: $exePath" -ForegroundColor Green
+            $fileInfo = Get-Item $exePath
+            Write-Host "   文件大小: $($fileInfo.Length) 字节" -ForegroundColor Gray
+            Write-Host "   创建时间: $($fileInfo.CreationTime)" -ForegroundColor Gray
+            echo "build_success=true" >> $env:GITHUB_OUTPUT
+          } else {
+            Write-Host "❌ 未找到可执行文件: $exePath" -ForegroundColor Red
+            Write-Host "   检查目录内容:" -ForegroundColor Yellow
+            if (Test-Path "Ink Canvas\bin\Debug\net472\") {
+              Get-ChildItem "Ink Canvas\bin\Debug\net472\" -ErrorAction SilentlyContinue | ForEach-Object {
+                Write-Host "   - $($_.Name)" -ForegroundColor Gray
+              }
+            } else {
+              Write-Host "   bin\Debug\net472 目录不存在" -ForegroundColor Red
+            }
+            echo "build_success=false" >> $env:GITHUB_OUTPUT
+            
+            # 如果是直接触发，则抛出错误
+            if ("${{ github.event_name }}" -eq "workflow_dispatch") {
+              Write-Host "🚨 工作流手动触发 - 构建失败，抛出错误！" -ForegroundColor Red -BackgroundColor Black
+              exit 1
+            }
+          }
+
+      - name: Create Package (if build succeeded)
         id: create-archive
+        if: steps.check-exe.outputs.build_success == 'true'
         env:
           GITHUB_SHA: ${{ github.sha }}
-          PREPARE_BUILD_NUMBER: ${{ needs.prepare.outputs.build_number }}
+          GITHUB_RUN_NUMBER: ${{ github.run_number }}
         run: |
-          $version = "debug-$env:GITHUB_SHA-$env:PREPARE_BUILD_NUMBER"
+          # 使用合并提交的短哈希（因为构建使用的是合并后的代码）
+          $shortSha = $env:GITHUB_SHA.Substring(0, 7)
+          $version = "debug-$shortSha-$env:GITHUB_RUN_NUMBER"
           $archiveName = "InkCanvasForClass.CE.$version.zip"
+          Write-Host "📦 正在创建归档包: $archiveName" -ForegroundColor Cyan
+          Write-Host "   使用合并提交哈希: $env:GITHUB_SHA" -ForegroundColor Gray
           Compress-Archive -Path "Ink Canvas\bin\Debug\net472\*" -DestinationPath $archiveName -Force
           echo "archive_name=$archiveName" >> $env:GITHUB_OUTPUT
-          echo "已创建归档包: $archiveName"
-      - name: Upload Artifact
+          Write-Host "✅ 已创建归档包: $archiveName" -ForegroundColor Green
+      
+      - name: Upload Artifact (if build succeeded)
+        if: steps.check-exe.outputs.build_success == 'true'
         uses: actions/upload-artifact@v4.5.0
         with:
           name: app-package
@@ -140,71 +236,132 @@ jobs:
 
   pr-check-comment:
     name: PR Check & Comment (Final)
-    needs: [build-and-package, pr-preview-comment]
-    if: github.event_name == 'pull_request'
+    needs: [build-and-package, find-or-create-pr-comment]
+    if: always() && github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
     steps:
-      - name: Find Existing Preview Comment
-        uses: peter-evans/find-comment@v3
-        id: find-existing-comment
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          comment-author: 'github-actions[bot]'
-          body-includes: '正在构建中'
-          
       - name: Prepare Final Comment Content
         id: prepare-final-comment
-        env:
-          GH_REPO: ${{ github.repository }}
-          GH_RUN_ID: ${{ github.run_id }}
-          GH_SHA: ${{ github.sha }}
-          BUILD_TIME: ${{ needs.prepare.outputs.build_time }}
-          BUILD_RESULT: ${{ needs.build-and-package.result }}
         run: |
+          # 从构建作业获取构建结果
+          BUILD_SUCCESS="${{ needs.build-and-package.outputs.build_result }}"
+          
+          # 使用 PR 分支的实际提交哈希
+          PR_HEAD_SHA="${{ github.event.pull_request.head.sha }}"
+          
           # 确定构建状态
-          if [ "$BUILD_RESULT" = "success" ]; then
+          if [ "$BUILD_SUCCESS" = "true" ]; then
             STATUS_ICON="✅"
-            STATUS_TEXT="成功"
+            STATUS_TEXT="构建成功"
+            COLOR="#00d26a"
           else
             STATUS_ICON="❌"
-            STATUS_TEXT="失败"
+            STATUS_TEXT="构建失败"
+            COLOR="#f85149"
           fi
           
-          # 处理时间变量，防止空白
-          FINAL_BUILD_TIME="${BUILD_TIME}"
-          if [ -z "$FINAL_BUILD_TIME" ]; then
-            FINAL_BUILD_TIME="未知时间"
-            echo "提示：BUILD_TIME 为空，使用默认值"
-          fi
+          # 检查是否是 ready_for_review 事件
+          READY_FOR_REVIEW="${{ github.event.action == 'ready_for_review' }}"
           
-          # 构建最终评论内容，使用文件确保正确换行
+          # 构建最终评论内容
           {
-            echo "# 构建完成 $STATUS_ICON"
+            if [ "$READY_FOR_REVIEW" = "true" ]; then
+              echo "# 🚀 PR 准备审查 - 构建结果"
+              echo ""
+              echo "> 📋 此 PR 已标记为 **准备审查**，构建验证完成"
+              echo ""
+            else
+              echo "# 📋 构建结果摘要"
+              echo ""
+            fi
+            
+            echo "## 本次构建状态"
             echo ""
-            echo "| 状态 | 提交 | 完成时间 | 操作 |"
-            echo "|------|------|----------|------|"
-            echo "| $STATUS_ICON $STATUS_TEXT | $GH_SHA | $FINAL_BUILD_TIME | [查看运行详情](https://github.com/$GH_REPO/actions/runs/$GH_RUN_ID) |"
+            echo "| 项目 | 结果 |"
+            echo "|------|------|"
+            echo "| 状态 | $STATUS_ICON **$STATUS_TEXT** |"
+            echo "| 事件类型 | \`${{ github.event.action }}\` |"
+            echo "| 分支提交 | \`$PR_HEAD_SHA\` |"
+            echo "| 工作流 | [运行 #${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) |"
+            
+            # 如果有构建产物，显示下载链接
+            if [ "$BUILD_SUCCESS" = "true" ]; then
+              echo ""
+              echo "## 构建产物"
+              echo "- 📦 [下载构建产物](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
+              
+              if [ "$READY_FOR_REVIEW" = "true" ]; then
+                echo ""
+                echo "## 🎉 审查建议"
+                echo "- ✅ 构建验证通过，代码可以正常编译"
+                echo "- 🔍 请进行代码审查"
+                echo "- 🧪 建议测试构建产物功能"
+              fi
+            else
+              if [ "$READY_FOR_REVIEW" = "true" ]; then
+                echo ""
+                echo "## ⚠️ 审查阻塞"
+                echo "- ❌ 构建失败，需要修复后才能继续审查"
+                echo "- 🔧 请检查构建错误并修复"
+                echo "- 📝 修复后重新标记为准备审查"
+              fi
+            fi
+            
             echo ""
-            echo "<sub>🤖 由 GitHub Actions 自动发布</sub>"
+            echo "---"
+            echo "<!-- github-action-pr-build -->"
+            echo "<!-- build-id: ${{ github.run_id }} -->"
+            echo "<!-- event-type: ${{ github.event.action }} -->"
+            echo "<!-- pr-head-sha: $PR_HEAD_SHA -->"
+            echo "<!-- merge-sha: ${{ github.sha }} -->"
+            echo "<sub>🤖 GitHub Actions 自动生成 • 最后更新: $(date -u +'%Y-%m-%d %H:%M:%S UTC')</sub>"
           } > final_comment.txt
           
           # 输出多行内容
           final_content=$(cat final_comment.txt)
-          delimiter="FINAL_$(date +%s)"
-          echo "final_body<<$delimiter" >> $GITHUB_OUTPUT
+          echo "final_body<<EOF" >> $GITHUB_OUTPUT
           echo "$final_content" >> $GITHUB_OUTPUT
-          echo "$delimiter" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
           
           echo "最终评论内容已生成"
-          echo "构建状态: $STATUS_ICON $STATUS_TEXT"
-          echo "构建时间: $FINAL_BUILD_TIME"
-          
-      - name: Update to Final Comment
+      
+      - name: Update Final Comment
         uses: peter-evans/create-or-update-comment@v4
         with:
-          comment-id: ${{ steps.find-existing-comment.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
+          comment-id: ${{ needs.find-or-create-pr-comment.outputs.comment_id }}
           body: ${{ steps.prepare-final-comment.outputs.final_body }}
           edit-mode: replace
+
+  final-check:
+    name: Final Check (Manual Trigger)
+    if: always() && github.event_name == 'workflow_dispatch'
+    needs: [build-and-package]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Build Result
+        id: check-build
+        run: |
+          BUILD_SUCCESS="${{ needs.build-and-package.outputs.build_result }}"
+          
+          if [ "$BUILD_SUCCESS" = "true" ]; then
+            echo "✅ 构建成功 - 工作流完成"
+            echo "status=success" >> $GITHUB_OUTPUT
+          else
+            echo "❌ 构建失败 - 抛出错误"
+            echo "status=failure" >> $GITHUB_OUTPUT
+            exit 1
+          fi
+      
+      - name: Create Summary (if successful)
+        if: steps.check-build.outputs.status == 'success'
+        run: |
+          echo "# 🎉 手动构建完成" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**构建状态:** ✅ 成功" >> $GITHUB_STEP_SUMMARY
+          echo "**提交:** \`${{ github.sha }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**运行编号:** #${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "[📦 下载构建产物](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
