--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -28,7 +28,8 @@ concurrency:
 
 jobs:
   prepare:
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    # Allow manual workflow_dispatch from any branch, or main branch, or tag pushes
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     runs-on: windows-latest
     outputs:
       tag_name: ${{ steps.get_tag.outputs.tag_name }}
@@ -38,9 +39,10 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
+          fetch-tags: true
 
       # ========== 获取当前版本 ==========
       - name: Get current version from Git tag
@@ -156,12 +158,23 @@ jobs:
           }
 
       # ========== 使用 git-cliff 生成变更日志 ==========
-      - name: Generate changelog with git-cliff
-        id: git_cliff
+      - name: Generate changelog with git-cliff (for pushed tag)
+        if: github.event_name == 'push'
+        id: git_cliff_tag
         uses: orhun/git-cliff-action@v4
         with:
           config: cliff.toml  # 使用项目根目录的 cliff.toml 配置
           args: --latest --tag ${{ steps.get_tag.outputs.tag_name }} --output CHANGELOG.md
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate changelog with git-cliff (for workflow_dispatch)
+        if: github.event_name == 'workflow_dispatch'
+        id: git_cliff_unreleased
+        uses: orhun/git-cliff-action@v4
+        with:
+          config: cliff.toml
+          args: --unreleased --output CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -184,7 +197,10 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+          fetch-tags: true
 
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v2.0.1
@@ -283,7 +299,9 @@ jobs:
       signatures_created: ${{ steps.sign_artifacts.outputs.signatures_created }}
       sigstore_file: "InkCanvasForClass.CE.${{ needs.prepare.outputs.version }}.zip.sigstore.json"
       sigstore_hash: ${{ steps.calculate_sig_hash.outputs.sigstore_hash }}
-    
+    permissions:
+      contents: write
+      id-token: write  # 需要这个权限来验证签名
     steps:
       - name: Download Build Artifacts
         uses: actions/download-artifact@v4
@@ -359,10 +377,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: signed-files-${{ needs.prepare.outputs.version }}
-          continue-on-error: true
+        continue-on-error: true
           
       - name: Verify signatures (if sigstore file exists)
-        if: hashFiles('InkCanvasForClass.CE.${{ needs.prepare.outputs.version }}.zip.sigstore.json') != ''
+        if: ${{ hashFiles(format('InkCanvasForClass.CE.{0}.zip.sigstore.json', needs.prepare.outputs.version)) }}
         run: |
           version="${{ needs.prepare.outputs.version }}"
           zipFile="InkCanvasForClass.CE.$version.zip"
@@ -384,13 +402,13 @@ jobs:
           fi
           
       - name: Setup Python for verification
-        if: hashFiles('InkCanvasForClass.CE.${{ needs.prepare.outputs.version }}.zip.sigstore.json') != ''
+        if: ${{ hashFiles(format('InkCanvasForClass.CE.{0}.zip.sigstore.json', needs.prepare.outputs.version)) }}
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
           
       - name: Install sigstore for verification
-        if: hashFiles('InkCanvasForClass.CE.${{ needs.prepare.outputs.version }}.zip.sigstore.json') != ''
+        if: ${{ hashFiles(format('InkCanvasForClass.CE.{0}.zip.sigstore.json', needs.prepare.outputs.version)) }}
         run: |
           python -m pip install sigstore
           
