--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -174,7 +174,7 @@ jobs:
         uses: orhun/git-cliff-action@v4
         with:
           config: cliff.toml
-          args: --unreleased --output CHANGELOG.md
+          args: --unreleased --tag ${{ steps.get_tag.outputs.tag_name }} --output CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -363,9 +363,6 @@ jobs:
     needs: [prepare, build, sign]
     if: success()
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write  # 需要这个权限来验证签名
     
     steps:
       - name: Download Build Artifacts
@@ -379,38 +376,6 @@ jobs:
           name: signed-files-${{ needs.prepare.outputs.version }}
         continue-on-error: true
           
-      - name: Verify signatures (if sigstore file exists)
-        if: ${{ hashFiles(format('InkCanvasForClass.CE.{0}.zip.sigstore.json', needs.prepare.outputs.version)) }}
-        run: |
-          version="${{ needs.prepare.outputs.version }}"
-          zipFile="InkCanvasForClass.CE.$version.zip"
-          sigstoreFile="$zipFile.sigstore.json"
-          
-          if [ -f "$sigstoreFile" ]; then
-            echo "Verifying signature for $zipFile using sigstore bundle..."
-            
-            # 使用 sigstore-python 验证签名
-            python -m sigstore verify \
-              "$zipFile" \
-              --bundle "$sigstoreFile" \
-              --cert-identity "https://github.com/${{ github.repository }}/.github/workflows/prerelease.yml@${{ github.ref_name }}" \
-              --cert-oidc-issuer "https://token.actions.githubusercontent.com"
-            
-            echo "✅ Sigstore signature verified successfully!"
-          else
-            echo "⚠️ No sigstore bundle found, skipping signature verification"
-          fi
-          
-      - name: Setup Python for verification
-        if: ${{ hashFiles(format('InkCanvasForClass.CE.{0}.zip.sigstore.json', needs.prepare.outputs.version)) }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-          
-      - name: Install sigstore for verification
-        if: ${{ hashFiles(format('InkCanvasForClass.CE.{0}.zip.sigstore.json', needs.prepare.outputs.version)) }}
-        run: |
-          python -m pip install sigstore
           
       - name: Create enhanced changelog with file table
         id: enhanced_changelog
@@ -421,21 +386,23 @@ jobs:
           originalChangelog="${{ needs.prepare.outputs.changelog }}"
           
           # 构建文件信息表格
-          fileTable="\n## 文件信息 (File Information)\n\n"
-          fileTable+="| 文件名 | 大小 | SHA256 哈希 |\n"
-          fileTable+="|--------|------|-------------|\n"
+          fileTable=$'\n## 文件信息 (File Information)\n'
+          fileTable+=$'| 文件名 | 大小 | SHA256 哈希 |\n'
+          fileTable+=$'|--------|------|-------------|\n'
           
           # ZIP 文件信息
-          fileTable+="| InkCanvasForClass.CE.$version.zip | ${{ needs.build.outputs.zip_size }} bytes | ${{ needs.build.outputs.zip_hash }} |\n"
+          fileTable+=$'| InkCanvasForClass.CE.'"$version"
+          fileTable+=$'.zip | ${{ needs.build.outputs.zip_size }} bytes | ${{ needs.build.outputs.zip_hash }} |\n'
           
           # 检查是否有签名文件
           if [ -f "InkCanvasForClass.CE.$version.zip.sigstore.json" ]; then
             sigstoreSize=$(stat -c%s "InkCanvasForClass.CE.$version.zip.sigstore.json")
             sigstoreHash=$(sha256sum "InkCanvasForClass.CE.$version.zip.sigstore.json" | cut -d' ' -f1)
-            fileTable+="| InkCanvasForClass.CE.$version.zip.sigstore.json | $sigstoreSize bytes | $sigstoreHash |\n"
+            fileTable+=$'| InkCanvasForClass.CE.'"$version"'.zip.sigstore.json | '"$sigstoreSize"' bytes | '"$sigstoreHash"
+            fileTable+=$' |\n'
           fi
           
-          fileTable+="\n*文件哈希和大小信息由GitHub Actions自动生成*"
+          fileTable+=$'\n*文件哈希和大小信息由GitHub Actions自动生成*\n'
           
           # 将表格附加到原始changelog
           enhancedChangelog="${originalChangelog}${fileTable}"
